--- a/css/styles.css
+++ b/css/styles.css
@@ -205,3 +205,11 @@ body {
   line-height: 1.86;
   letter-spacing: 0.03em;
 }
+/* flexbox-header */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  
+}
+
+ 
