--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,34 @@
 :root {
   --brand-color: #212121;
-  --white-color: #ffffff; 
+  --white-color: #ffffff;
   --blue-color: #2196f3;
   --grey-color: #2f303a;
   --white2-color: #f5f4fa;
   --brown-color: #757575;
   --black-color: #000000;
+  --border-color: #ececec;
 }
 body {
   font-family: "roboto", "sans-serif";
   color: #212121;
 }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  outline: 1px dotted;
+  padding: 0px;
+}
+.section {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+.main-page {
+  max-width: 1600px;
+  max-height: 2349px;
+  background-color: var(--white-color);
+  margin: 0 auto;
+}
+/* header */
 .logo {
   text-decoration: none;
   cursor: pointer;
@@ -36,7 +54,7 @@ body {
 .logo:focus {
   color: var(--blue-color);
 }
-.header-links{
+.header-links {
   list-style: none;
 }
 .header-link {
@@ -50,7 +68,7 @@ body {
 .header-link:hover {
   color: var(--blue-color);
 }
-.contacts{
+.contacts {
   list-style: none;
 }
 .contact-mail,
@@ -70,6 +88,16 @@ body {
 .contact-phone:hover {
   color: var(--blue-color);
 }
+/* title button */
+.dark-bg {
+  background: #2f303a;
+}
+.header-and-button {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
 .header {
   color: var(--white-color);
   font-weight: 900;
@@ -77,7 +105,9 @@ body {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  background: #2f303a;
+  text-align: center;
+  line-height: 60px;
+  margin: 106px 252px 30px;
 }
 .main-button {
   cursor: pointer;
@@ -91,9 +121,18 @@ body {
   border-radius: 4px;
   border: none;
   font-family: inherit;
+  padding: 10px 42px 10px 41px;
+  margin-bottom: 200px;
 }
-.text-list{
+.text-list {
   list-style: none;
+  display: flex;
+  padding: 0px;
+  gap: 30px;
+}
+.whole-text {
+  display: inline;
+  padding-top: 94px;
 }
 .text-title {
   color: var(--brand-color);
@@ -102,13 +141,22 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  line-height: 16px;
+  box-sizing: border-box;
+  display: flex;
+  width: 270px;
+  height: 16px;
 }
-.text-despription {
+.text-description {
   color: var(--brown-color);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+
+  display: flex;
+  width: 270px;
+  height: 75px;
 }
 .header-about,
 .team-header {
@@ -117,12 +165,40 @@ body {
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  text-align: center;
 }
-.photos-list{
-  list-style: none;
+.photos-about {
+  padding-top: 94px;
 }
-.team-list{
+
+.photos-list {
   list-style: none;
+  padding: 0px;
+  display: flex;
+  text-align: center;
+  gap: 30px;
+  padding-left: 15px;
+}
+.team {
+  background-color: var(--white2-color);
+  width: 1600px;
+  height: 648px;
+  padding-top: 94px;
+  margin-top: 94px;
+}
+.team-list {
+  list-style: none;
+  display: flex;
+  gap: 0px;
+  justify-content: space-evenly;
+  padding-left: 0px;
+  text-align: center;
+}
+.team-item {
+  border: 1px solid red;
+  max-width: 100%;
+  padding: 0px;
+  margin: 0px;
 }
 .team-name {
   color: var(--brand-color);
@@ -131,6 +207,7 @@ body {
   line-height: 1.89;
   letter-spacing: 0.03em;
 }
+
 .team-job {
   color: var(--brown-color);
   font-weight: 400;
@@ -149,7 +226,7 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
-.footer-list{
+.footer-list {
   list-style: none;
 }
 .address {
@@ -169,7 +246,7 @@ body {
   letter-spacing: 0.03em;
   font-style: normal;
 }
-.header-navigation{
+.header-navigation {
   list-style: none;
 }
 .filter-button {
@@ -188,7 +265,7 @@ body {
   background-color: var(--blue-color);
   color: var(--white-color);
 }
-.projects-list{
+.projects-list {
   list-style: none;
 }
 .projects-description h3 {
@@ -205,11 +282,32 @@ body {
   line-height: 1.86;
   letter-spacing: 0.03em;
 }
-/* flexbox-header */
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  
-}
 
- 
+/* flexbox-header */
+.flex-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  border-bottom: 1px solid var(--border-color);
+}
+.logo-links {
+  display: flex;
+  align-items: center;
+}
+.header-links {
+  display: flex;
+  padding: 0px;
+  margin-left: 93px;
+}
+.header-links li {
+  margin: 46px;
+}
+.contacts {
+  display: flex;
+}
+.contacts li {
+  margin: 50px;
+  margin-right: 0px;
+}
+/* flexbox header button */
